# Eve_SDE

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  RELEASING.md  docker-compose.test.yml  pyproject.toml
.github/workflows/: ci.yml
reference/: SDE_schema_report.md  eve_sde_full_schema.sql  eve_sde_optimized.sql  eve_sde_schema.sql
src/evesde/: __init__.py  cli.py  config.py
src/evesde/api/: __init__.py  queries.py  sde.py
src/evesde/etl/: __init__.py  loader.py  marts.py  source.py  transform.py  verify.py
src/evesde/schema/: __init__.py  builder.py  manifest.json
tests/: conftest.py
tests/fixtures/sde_marts/: _sde.jsonl  agentTypes.jsonl  bloodlines.jsonl  blueprints.jsonl  categories.jsonl  dogmaAttributes.jsonl  factions.jsonl  groups.jsonl  mapConstellations.jsonl  mapRegions.jsonl  mapSolarSystems.jsonl  marketGroups.jsonl  metaGroups.jsonl  npcCharacters.jsonl  npcCorporationDivisions.jsonl  npcCorporations.jsonl  npcStations.jsonl  races.jsonl  typeDogma.jsonl  types.jsonl
tests/fixtures/sde_mini/: epicArcs.jsonl  masteries.jsonl  notInManifest.jsonl  types.jsonl
tests/fixtures/sde_mini_broken/: epicArcs.jsonl
tests/fixtures/sde_mini_v2/: epicArcs.jsonl
tests/integration/: test_api_sqlite.py  test_builder_dbms.py  test_builder_sqlite.py  test_cli.py  test_full_chain_dbms.py  test_loader_dbms.py  test_loader_sqlite.py  test_marts_sqlite.py  test_readme_examples.py  test_update_if_needed.py  test_verify_sqlite.py
tests/unit/: test_api_queries.py  test_config.py  test_gen_manifest.py  test_source.py  test_transform.py
tools/: gen_manifest.py
